add client side mustache panel

--- a/samples/src/main/java/de/agilecoders/wicket/template.mustache
+++ b/samples/src/main/java/de/agilecoders/wicket/template.mustache
@@ -3,6 +3,6 @@ Items:<br>
 Name: {{name}}<br>
 Price: {{price}}<br>
   {{#features}}
-  Feature: {{description}}<br>
+  "Feature": {{.}}<br>
   {{/features}}<br>
 {{/items}}
